# activ1st

./: .replit  README.md  db.sqlite3  passwords.txt  pyproject.toml  replit_zip_error_log.txt
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json
landing/templates/landing/: base.html  index.html  navbar.html
protest/: asgi.py  log  settings.py  urls.py  wsgi.py
social/: admin.py  forms.py  models.py  urls.py  views.py
social/migrations/: 0001_initial.py  0002_protest_date_protest_image_protest_link_and_more.py  0003_alter_protest_title.py
social/templates/social/: followers_list.html  post_detail.html  post_edit.html  post_list.html  profile.html  profile_edit.html  protest_delete.html  protest_detail.html  protests.html  search.html
socialExperiment/: db.sqlite3  manage.py
socialExperiment/landing/: views.py
socialExperiment/landing/templates/landing/: base.html  index.html  navbar.html
socialExperiment/social/: admin.py  forms.py  models.py  urls.py  views.py
socialExperiment/social/migrations/: 0001_initial.py  0002_comment.py  0003_userprofile.py  0004_userprofile_location.py  0005_userprofile_followers.py  0006_event.py  0007_event_link.py  0008_userprofile_pronouns.py  0009_alter_event_link.py  0010_alter_event_date.py  0011_event_preview.py  0012_post_dislikes_post_likes.py  0013_event_image.py  0014_remove_event_preview_alter_event_image.py
socialExperiment/social/templates/social/: event_edit.html  (+11 more)
socialExperiment/socialExperiment/: asgi.py  settings.py  urls.py  wsgi.py
static/: index.css  style.css
