[tool.poetry]
name = "repl_nix_socialexperiment"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
attr = "^0.3.2"
Django = "^4.1.4"
django-mapbox-location-field = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
